<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.view.fragments.DetailsFragment">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/toolbar"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_money"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/includeToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="32dp" />
    <TextView
        android:id="@+id/origin"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageIcon"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        tools:text="@string/origin" />

    <TextView
        android:id="@+id/category"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/origin"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        tools:text="@string/category" />

    <TextView
        android:id="@+id/value"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        tools:text="@string/value" />


</androidx.constraintlayout.widget.ConstraintLayout>