<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="24dp"
    android:paddingBottom="14dp">

    <TextView
        android:id="@+id/filterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filtro_de_buscas"
        android:textColor="@color/text_primary_color"
        android:layout_marginHorizontal="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clearFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:text="@string/limpar"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filterText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="3sp"
        android:text="@string/atrav_s_deste_recurso_voc_consegue_achar_facilmente_todos_os_lan_amentos_de_sua_conta_basta_escolher_as_op_es_de_filtro_abaixo"
        android:textColor="@color/text_primary_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterTitle" />

    <TextView
        android:id="@+id/monthTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:lineSpacingExtra="3sp"
        android:text="@string/m_s"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/monthRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="16dp"
        tools:itemCount="12"
        tools:listitem="@layout/home_filter_by_month_card"
        app:layout_constraintTop_toBottomOf="@+id/monthTitle" />

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:lineSpacingExtra="3sp"
        android:text="@string/categorias"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthRecyclerView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        tools:itemCount="12"
        tools:listitem="@layout/home_filter_by_category_card"
        app:layout_constraintTop_toBottomOf="@+id/categoryTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:letterSpacing="0"
        android:text="@string/aplicar_filtro"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/primary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryRecyclerView" />
</androidx.constraintlayout.widget.ConstraintLayout>